Bug 227908 - Option 'Start with last selected view' does not work
Summary: Option 'Start with last selected view' does not work
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: LO minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 239848 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-02-21 10:04 UTC by Thomas Baumgart
Modified: 2010-08-13 09:24 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2010-02-21 10:04:20 UTC
Version:           SVN HEAD (using KDE 4.3.5)
OS:                Linux
Installed from:    openSUSE RPMs

The option has no effect. Upon startup, the home page is always shown.
Comment 1 Cristian Oneț 2010-02-21 22:11:50 UTC
(In reply to comment #0)
> Version:           SVN HEAD (using KDE 4.3.5)
> OS:                Linux
> Installed from:    openSUSE RPMs
> 
> The option has no effect. Upon startup, the home page is always shown.
I've just compiled SVN HEAD and it seems to be working here any ideas why?
Comment 2 Tony B 2010-02-22 12:04:00 UTC
My experience of this is that it's intermittent. It was reported on SF as happening with a DB backend on KDE3, but I found it sometimes happened with conventional files too.
Comment 3 Thomas Baumgart 2010-03-20 13:13:23 UTC
SVN commit 1105495 by tbaumgart:

Only remember a changed setting if we're not called during construction

BUG: 227908

 M  +7 -4      kmymoneyview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1105495
Comment 4 Thomas Baumgart 2010-05-28 11:26:46 UTC
*** Bug 239848 has been marked as a duplicate of this bug. ***
Comment 5 Thomas Baumgart 2010-08-13 09:24:30 UTC
SVN commit 1162963 by tbaumgart:

Fixed the "startup with last selected view" problem which showed up again.

BUG: 227908

 M  +4 -0      kmymoney.kcfg  
 M  +6 -15     views/kmymoneyview.cpp  
 M  +1 -3      views/kmymoneyview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1162963