Only remember a changed setting if we're not called during construction

BUG: 227908

svn path=/trunk/playground/office/kmymoney/; revision=1105495